# ws-demo

./: .dockerignore  .editorconfig  .gitignore  .mdformat.toml  CMakeLists.txt  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  main.cpp
.github/: CODEOWNERS
.github/workflows/: style.yaml
Boost_tests/: CMakeLists.txt  LambdaTest.cpp
doc/: ctest.md
docker/: Dockerfile.ALPINE  README.md  devtools.Dockerfile
interface/: ievent_handler.hpp
ipc/: boost_https_login.cpp  boost_https_login.hpp  boost_mo_ws_client_async.cpp  boost_mo_ws_client_async.hpp  event_handler.cpp  event_handler.hpp
utils/: my_json_parser.cpp  my_lambda_func.cpp  my_lambda_func.hpp  my_logger.cpp  my_logger.hpp  my_memory_check.cpp  my_memory_check.hpp  my_string_utils.cpp  my_string_utils.hpp
